--- a/cart/templates/cart/includes/checkout-btns.html
+++ b/cart/templates/cart/includes/checkout-btns.html
@@ -1,6 +1,6 @@
 <div class="row justify-content-center pb-3">
     <div class="col-md-6 col-sm-12">
-        <a href="{% url 'products' %}" class="w-100 text-wht border-bk btn btn-warning">
+        <a href="{% url 'products' %}" class="w-100 text-wht border-bk btn btn-warning hover-shadow">
             <span class="icon">
                 <i class="fad fa-store"></i>
             </span>
@@ -10,7 +10,7 @@
     </div>
 
     <div class="col-md-6 col-sm-12">
-        <a href="{% url 'checkout' %}" class="w-100 border-bk btn btn-success">
+        <a href="{% url 'checkout' %}" class="w-100 border-bk btn btn-success hover-shadow">
 
             <span class="aw text-center">Checkout</span>
             </span>
