--- a/cart/templates/cart/includes/remove.html
+++ b/cart/templates/cart/includes/remove.html
@@ -1,6 +1,6 @@
 {% load static %}
-<a class="pr-2 btt-link remove-item text-danger" id="remove_{{ item.item_id }}" data-product_size="{{ item.size }}"><i
-        class=" fad fa-trash-alt text-red fa-lg"></i>
+<a class="pr-2 btt-link remove-item text-danger hover-shadow" id="remove_{{ item.item_id }}"
+    data-product_size="{{ item.size }}"><i class=" fad fa-trash-alt text-red fa-lg"></i>
 </a>
 
 {% block postloadjs %}
