added new stylues to checkoutsuccess

--- a/blog/templates/blog/blog_detail.html
+++ b/blog/templates/blog/blog_detail.html
@@ -53,7 +53,7 @@
                 <hr class="hr-wht">
 
                 <!-- Post Content -->
-                <p class="text-off-wht mx-auto">{{ blog.content|safe }}</p>
+                <p class="text-off-wht-d  mx-auto">{{ blog.content|safe }}</p>
                 <hr class="hr-wht">
                 <p class="">If you like the Post, give it a
                     <a class="text-muted" href="{{ blog.get_like_url }}">
