--- a/static/css/style.css
+++ b/static/css/style.css
@@ -144,6 +144,10 @@ img {
   color: rgb(192, 190, 190);
 }
 
+.text-off-wht-d {
+  color: rgb(150, 147, 147);
+}
+
 .text-grn {
   color: rgb(27, 216, 125);
 }
