--- a/templates/base.html
+++ b/templates/base.html
@@ -85,7 +85,7 @@
 
     {% block content %}
     {% endblock content %}
-    {% include "base_partials/_footer.html" %}
+    {% include "base_partials/footer.html" %}
 
 
     {% block postloadjs %}
