--- a/static/css/style.css
+++ b/static/css/style.css
@@ -40,6 +40,10 @@ img {
   border-top: 1px solid rgba(160, 160, 160, 0.493);
 }
 
+.hr-bk {
+  border-top: 1px solid rgba(0, 0, 0, 0.801);
+}
+
 .custom-pl {
   padding-left: 4rem;
 }
@@ -178,6 +182,10 @@ img {
 
 .bg-yellow {
   background-color: rgb(229, 206, 33);
+}
+
+.bg-off-white {
+  background-color: rgba(150, 147, 147, 0.404);
 }
 
 .font-small {
@@ -826,7 +834,14 @@ nav {
   background-color: black;
 }
 
+#footer-legal {
+  color: rgb(128, 128, 128);
+  line-height: 0.9rem;
+  font-size: 0.8em;
+}
+
 .feet-bg {
+  font-size: 0.9rem;
   font-weight: 600;
   background-image: linear-gradient(-45deg,
       rgb(27, 240, 8),
