--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -13,7 +13,7 @@
             </div>
         </div>
     </div>
-    <div class="container profile">
+    <div class="container profile pb-4">
         <div class="profile-overlay">
             <div class="col p-4">
                 <h4 class="text-primary aw display-4 text-center"> Dashboard</h4>
