--- a/static/css/style.css
+++ b/static/css/style.css
@@ -9,6 +9,7 @@ html {
 
 body {
   margin-top: 8rem;
+  overflow-x: hidden;
 
 }
 
@@ -190,6 +191,10 @@ img {
 
 .font-small {
   font-size: 0.75rem;
+}
+
+.display-4 {
+  font-size: 2.7rem;
 }
 
 .minus-block {
@@ -910,6 +915,10 @@ nav {
   .video-width {
     max-width: 400px;
   }
+
+  .display-4 {
+    font-size: 3.5rem;
+  }
 }
 
 @media (max-width: 576px) {
@@ -968,6 +977,10 @@ nav {
 
   .max-width {
     max-width: 65%;
+  }
+
+  .display-4 {
+    font-size: 4rem;
   }
 
 
