--- a/templates/base_partials/footer.html
+++ b/templates/base_partials/footer.html
@@ -5,26 +5,25 @@
         <div class="col-3 d-none d-md-block ">
             <img class="ml-3" src="{% static 'images/logo.png' %}" alt="">
         </div>
-        <div class="col-md-6 col-sm-9 col-12">
+        <div class="col-md-6 col-sm-9 col-12 pt-3">
             <p class="aw text-wht text-center">Be the First to recieve exciting news, Features, and special
-                offers
-                from Focus Fitness!
+                offers from Focus Fitness!
             </p>
-            <form>
-                <div class="form-row align-items-center">
-                    <div class="col-auto mx-auto">
-                        <form action="{% url 'marketing:newsubs' %}" method="POST">
-                            {% csrf_token %}
-                            <div class="input-group  mb-2">
-                                {{ news_form }}
-                                <div class="input-group-prepend">
-                                    <button type="submit" class="aw btn btn-outline-light btn-sm">Submit</button>
-                                </div>
+
+            <div class="form-row align-items-center">
+                <div class="col-auto mx-auto">
+                    <form action="{% url 'marketing:newsubs' %}" method="POST">
+                        {% csrf_token %}
+                        <div class="input-group  mb-2">
+                            {{ news_form }}
+                            <div class="input-group-prepend">
+                                <button type="submit" class="aw btn btn-outline-light btn-sm">Submit</button>
                             </div>
-                        </form>
-                    </div>
+                        </div>
+                    </form>
                 </div>
-            </form>
+            </div>
+
 
             <div class="col-12 ">
                 <div class="social text-center">
