changed produts in name space

--- a/cart/templates/cart/cart.html
+++ b/cart/templates/cart/cart.html
@@ -9,7 +9,7 @@
     <div class="container ">
         <div class="row">
             <div class="col-md-12 mb-0">
-                <a class="text-wht aw pl-2" href="{% url 'products' %}">Shop</a>
+                <a class="text-wht aw pl-2" href="{% url 'products:products' %}">Shop</a>
                 <span class="mx-2 mb-0 text-wht">/</span>
                 <span class="mx-2 mb-0 text-wht"><small class="aw">Cart</small></span>
 
@@ -139,7 +139,7 @@
                 <div class="container">
                     <div class="row center-block-col">
                         <h5 class="col-12 empty aw">
-                            <a href="{% url 'products' %}"><span class="vert-aline"> Your cart is
+                            <a href="{% url 'products:products' %}"><span class="vert-aline"> Your cart is
                                     empty.</span>
                                 <span><i class="mb-0 fad fa-cart-plus fa-2x"></i></span>
                             </a>
