--- a/cart/templates/cart/includes/checkout-btns.html
+++ b/cart/templates/cart/includes/checkout-btns.html
@@ -1,6 +1,6 @@
 <div class="row justify-content-center pb-3">
     <div class="col-md-6 col-sm-12">
-        <a href="{% url 'products' %}" class="w-100 text-wht border-bk btn btn-warning hover-shadow">
+        <a href="{% url 'products:products' %}" class="w-100 text-wht border-bk btn btn-warning hover-shadow">
             <span class="icon">
                 <i class="fad fa-store"></i>
             </span>
