--- a/templates/base_partials/footer.html
+++ b/templates/base_partials/footer.html
@@ -57,7 +57,7 @@
                     <a class=" col-12 btn btn-danger btn-sm aw text-wht  border border-white m-2" href="#"
                         role="button">Join Up</a>
                     <a class="col-12 btn btn-primary btn-sm aw text-wht border border-white m-2"
-                        href="{% url 'products' %}" role="button">Shop
+                        href="{% url 'products:products' %}" role="button">Shop
                     </a>
                     <a class="col-12 btn btn-warning btn-sm aw text-wht border border-white m-2" href="#"
                         role="button">Blog</a>
