changed checkoutname space and added discounts to order

--- a/cart/templates/cart/includes/checkout-btns.html
+++ b/cart/templates/cart/includes/checkout-btns.html
@@ -10,7 +10,7 @@
     </div>
 
     <div class="col-md-6 col-sm-12">
-        <a href="{% url 'checkout' %}" class="w-100 border-bk btn btn-success hover-shadow">
+        <a href="{% url 'checkout:checkout' %}" class="w-100 border-bk btn btn-success hover-shadow">
 
             <span class="aw text-center">Checkout</span>
             </span>
