--- a/blog/templates/blog/blog_search.html
+++ b/blog/templates/blog/blog_search.html
@@ -23,47 +23,12 @@
     <div class="row mx-4">
         <!-- Blog Entries Column -->
         <div class="col-md-8">
-            <div class="ovalpha-overlay">
-                <h1 class="my-4 aw text-red text-center">Featured Blogs</h1>
-            </div>
-            <div id="feature_carousel" class="carousel slide" data-ride="carousel">
-                <div class="carousel-inner text-wht">
-                    {% for blog in feature_blog %}
-                    <div class="carousel-item {% if forloop.counter == 1 %}active{% endif %}"
-                        id="slide{{ forloop.counter }} ">
-
-                        <a href="{{ blog.get_absolute_url }}">
-                            <img class="d-block carosel-img mx-auto" src="{{ blog.thumbnail.url }}" alt="First slide">
-                            <div class="row justify-content-center">
-                                <h5 class="text-center text-wht">{{ blog.title|title }}</h5>
-                            </div>
-                        </a>
-                        <div class="row justify-content-center">
-                            <div class="text-center col-md-2"><span><i class="text-grn fad fa-eye"></i>
-                                    {{ blog.get_view_count }}</span></div>
-                            <div class="text-center col-md-2"><span><i class="text-primary fad fa-thumbs-up"></i>
-                                    {{ blog.get_like_count }}</span><br></div>
-                            <div class="text-center col-md-2"><span><i class="text-ylw fad fa-comments-alt"></i>
-                                    {{ blog.get_comment_count }}</span></div>
-                        </div>
-                    </div>
-                    {% endfor %}
-                </div>
-                <a class="carousel-control-prev" href="#feature_carousel" role="button" data-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Previous</span>
-                </a>
-                <a class="carousel-control-next" href="#feature_carousel" role="button" data-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Next</span>
-                </a>
-            </div>
             <div class="ovalpha-overlay rounded-10">
-                <h2 class="my-4 aw text-primary text-center">All Blogs</h2>
+                <h2 class="my-4 aw text-primary text-center">Searched Blogs</h2>
             </div>
 
             {% for blog in all_blogs %}
-            {% if blog.featured != True %}
+
             {% if not forloop.counter|divisibleby:2  %}
             <a href="{{ blog.get_absolute_url }}">
                 <div class="card mb-3" style="max-width: 830px;">
@@ -124,7 +89,7 @@
                     </div>
                 </div>
             </a>
-            {% endif %}
+
             {% endif %}
             {% endfor %}
         </div>
@@ -135,7 +100,7 @@
                 <!-- <h5 class="aw text-wht bg-green text-center card-header">Search</h5> -->
                 <div class="card-body mx-auto ">
                     <div class="input-group">
-                        <form method="GET" action="{% url 'blog:search' %}" class="form-inline my-2 my-lg-0">
+                        <form method="GET" action="{% url 'blog:list' %}" class="form-inline my-2 my-lg-0">
                             <input class="aw form-control mr-sm-2" name="s" type="search" placeholder="Search Blogs"
                                 aria-label="Search">
                             <button class="aw btn btn-success my-2 my-sm-0" type="submit">Go!</button>
