--- a/blog/templates/blog/blog_search.html
+++ b/blog/templates/blog/blog_search.html
@@ -10,13 +10,13 @@
     <div class="container ">
         <div class="row">
             <div class="col-md-12 mb-0">
-                <a class="text-wht aw pl-2" href="{% url 'home' %}">Home</a>
+                <a class="text-wht aw pl-2" href="{% url 'blog:list' %}">Blogs</a>
                 <span class="mx-2 mb-0 text-wht">/</span>
                 {% if user.is_authenticated %}
                 <a class="text-wht aw pl-2" href="{% url 'blog:create' %}">Create</a>
                 <span class="mx-2 mb-0 text-wht">/</span>
                 {% endif %}
-                <small class="text-wht aw">Blogs</small>
+                <small class="text-wht aw">Search results</small>
             </div>
         </div>
     </div>
