trying to add hook url to order

--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -58,6 +58,7 @@
                     </div>
                     <div class="col-12 col-md-8 text-right">
                         <small class="mb-0">{{ order.order_number }}</small>
+                        <small class="mb-0">{{ order.stripe_receipt }}</small>
                     </div>
                 </div>
 
