--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -15,7 +15,11 @@
     <div class="container ">
         <div class="row">
             <div class="col-md-12 mb-0">
+                {% if user.is_authenticated %}
                 <a class="text-wht aw pl-2" href="{% url 'profile' %}">Dashboard</a>
+                {% else %}
+                <a class="text-wht aw pl-2" href="{% url 'home' %}">Home</a>
+                {% endif %}
                 <span class="mx-2 mb-0 text-wht">/</span>
                 <small class="text-wht aw">Invoice</small>
             </div>
@@ -35,7 +39,7 @@
             <h2 class="aw mb-4 text-center">
                 Thank You
             </h2>
-            <p class="text-center ">Your confirmation email has been sent to <br>{{  order.email }}</p>
+            <p class="mx-auto">Your confirmation email has been sent to <br>{{  order.email }}</p>
             {% endif %}
 
         </div>
@@ -54,11 +58,11 @@
 
                 <div class="row">
                     <div class="col-12 col-md-4">
-                        <p class="mb-0 text-black aw">Order Number</p>
+                        <p class="mb-0 text-black aw">Order</p>
                     </div>
                     <div class="col-12 col-md-8 text-right">
                         <small class="mb-0">{{ order.order_number }}</small>
-                        <small class="mb-0">{{ order.stripe_receipt }}</small>
+                        <small class="mb-0"></small>
                     </div>
                 </div>
 
@@ -118,7 +122,8 @@
                 </div>
                 <div class="row">
                     <div class="col-12 col-md-4">
-                        <p class="mb-0 text-black aw">TAX:<small class="text-muted"> 15%</small></p>
+                        <p class="mb-0 text-black aw">Tax:<small class="text-muted px-1"><span class="mont_r">@</span>
+                                15%</small></p>
                     </div>
                     <div class="col-12 col-md-8 text-right">
                         <p class="mb-0 aw">${{ order.tax }}</p>
@@ -135,11 +140,17 @@
                 </div>
 
                 <div class="row">
-                    <div class="col-12 col-md-4">
+                    <div class="col-12 col-md-6">
                         <p class="mb-0 aw ">Grand Total:</p>
                     </div>
-                    <div class="col-12 col-md-8 text-right">
+                    <div class="col-12 col-md-6 text-right">
                         <p class="mb-0 aw"><span class="underline ">${{ order.grand_total }}</span></p>
+                    </div>
+                    <div class="col-12 col-md-8">
+                        <a class="aw btn btn-primary border-bk hover-shadow" href="{{ order.stripe_receipt }}"
+                            target="_blank"><i class="fad fa-file-invoice-dollar fa-lg px-1"></i><span class="aw">View
+                                Receipt</span>
+                        </a>
                     </div>
 
                 </div>
