styled messages and have put a hold on stripe-reciets_urls

--- a/templates/includes/toasts/toast_warning.html
+++ b/templates/includes/toasts/toast_warning.html
@@ -1,14 +1,11 @@
-<div class="toast custom-toast rounded-0 border-top-0" data-autohide="false" data-autohide="true" data-delay="3000"
+<div class="toast border border-warning custom-toast rounded-10" data-autohide="true" data-delay="5000"
     data-animation="true">
-    <div class="arrow-up arrow-warning"></div>
-    <div class="w-100 toast-capper bg-warning"></div>
-    <div class="toast-header bg-white text-dark">
-        <strong class="mr-auto">Warning!</strong>
-        <button type="button" class="ml-2 mb-1 close text-dark" data-dismiss="toast" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-        </button>
+
+    <div class="toast-header bg-black-a text-wht">
+        <h4 class="aw mx-auto text-ylw"><i class="fad fa-exclamation-triangle px-2"></i>Warning!</h4>
     </div>
-    <div class="toast-body bg-white">
+    <div class="w-100 toast-capper bg-warning"></div>
+    <div class="toast-body bg-white text-center mont_r ">
         {{ message }}
     </div>
 </div>
