--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -144,8 +144,13 @@
         </div>
     </div>
 </div>
+<div id="loading-overlay">
+    <h1 class="text-ligh logo-font loading-spinner">
 
+        <i class="text-wht fad fa-dumbbell fa-6x fa-spin"></i>
 
+    </h1>
+</div>
 {% endblock content %}
 
 {% block postloadjs %}
