--- a/static/css/checkout.css
+++ b/static/css/checkout.css
@@ -57,8 +57,8 @@ select option[value=""] {
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(23, 162, 184, .85);
-    z-index: 9999;
+    background: rgba(0, 0, 0, 0.719);
+    z-index: 99999;
 }
 
 .loading-spinner {
