--- a/static/css/style.css
+++ b/static/css/style.css
@@ -878,19 +878,19 @@ nav {
 /* ------Messages  */
 .message-container {
   position: fixed;
-  top: 73px;
+  top: 30px;
   right: 10px;
-  min-width: 315;
+
   z-index: 999999999;
 
 }
 
-
+.custom-toast {
+  min-width: 300px;
+}
 
 .toast {
   background-clip: padding-box;
-  /*border: 1px solid rgba(0,0,0,.1);
-  */
   box-shadow: 0 0.25rem 0.75rem rgba(0, 0, 0, .1);
   -webkit-backdrop-filter: blur(10px);
   backdrop-filter: blur(10px);
@@ -901,7 +901,8 @@ nav {
 
 
 .toast-capper {
-  height: 5px;
+  height: 10px;
+  margin-top: -2px;
 }
 
 
