--- a/templates/includes/toasts/toast_error.html
+++ b/templates/includes/toasts/toast_error.html
@@ -1,14 +1,14 @@
-<div class="toast custom-toast rounded-0 border-top-0" data-autohide="false" data-autohide="true" data-delay="5000"
+<div class="toast border border-danger custom-toast rounded-10" data-autohide="false" data-delay="5000"
     data-animation="true">
-    <div class="arrow-up arrow-danger"></div>
-    <div class="w-100 toast-capper bg-danger"></div>
-    <div class="toast-header bg-white text-dark">
-        <strong class="mr-auto">Error!</strong>
-        <button type="button" class="ml-2 mb-1 close text-dark" data-dismiss="toast" aria-label="Close">
+
+    <div class="toast-header bg-black-a  text-wht">
+        <h4 class="aw mx-auto text-red"><i class="fad fa-exclamation-triangle fa-lg px-2"></i>Error!</h4>
+        <button type="button" class="ml-2 mb-1 close text-wht" data-dismiss="toast" aria-label="Close">
             <span aria-hidden="true">&times;</span>
         </button>
     </div>
-    <div class="toast-body bg-white">
+    <div class="w-100 toast-capper bg-danger"></div>
+    <div class="toast-body bg-white text-center mont_r">
         {{ message }}
     </div>
 </div>
