--- a/templates/includes/toasts/toast_info.html
+++ b/templates/includes/toasts/toast_info.html
@@ -1,14 +1,11 @@
-<div class="toast custom-toast" data-autohide="true" data-delay="3000" data-animation="true">
+<div class="toast border border-primary custom-toast rounded-10" data-autohide="true" data-delay="3000"
+    data-animation="true">
 
-    <div class="arrow-up arrow-info"></div>
-    <div class="w-100 toast-capper bg-info"></div>
-    <div class="toast-header bg-white text-dark">
-        <strong class="aw mr-auto">Info</strong>
-        <button type="button" class="ml-2 mb-1 close text-dark" data-dismiss="toast" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-        </button>
+    <div class="toast-header bg-black-a  text-wht">
+        <h4 class="aw mx-auto text-primary"><i class="fad fa-info-circle px-2 "></i>Info</h4>
     </div>
-    <div class="toast-body bg-white">
+    <div class="w-100 toast-capper bg-primary"></div>
+    <div class="toast-body bg-white text-center mont_r">
         {{ message }}
     </div>
 </div>
