--- a/templates/includes/toasts/toast_success.html
+++ b/templates/includes/toasts/toast_success.html
@@ -1,13 +1,12 @@
-<div class="toast custom-toast" data-autohide="true" data-delay="3000" data-animation="true">
+<div class="toast border border-success custom-toast rounded-10" data-autohide="true" data-delay="3000"
+    data-animation="true">
 
-    <div class="w-100 toast-capper bg-success"></div>
-    <div class="toast-header bg-green  text-wht">
-        <p class="aw mx-auto">Success!</p>
-        <button type="button" class="ml-2 mb-1 close text-dark" data-dismiss="toast" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-        </button>
+    <div class="toast-header bg-black-a  text-wht">
+        <h4 class="aw mx-auto text-grn"><i class=" fad fa-check-circle px-2"></i>Success!</h4>
+
     </div>
-    <div class="toast-body bg-white">
+    <div class="w-100 toast-capper bg-success"></div>
+    <div class="toast-body bg-white text-center mont_r">
         {{ message }}
     </div>
 </div>
